fixes path for html file in package.json

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/main.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-      <h1>start coding!!!</h1>
+      <h1>start coding!</h1>
     <script src="build/bundle.js" charset="utf-8"></script>
   </body>
 </html>
